# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/user/register": {
+        "/api/user/register": {
             "post": {
                 "description": "Create a new user",
                 "consumes": [
@@ -30,13 +30,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "User Response",
                         "schema": {
                             "$ref": "#/definitions/dtos.CreateUserResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Api Error",
                         "schema": {
                             "$ref": "#/definitions/helpers.ApiError"
                         }
